--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,11 @@
 .App {
   text-align: center;
+  overflow-x: hidden;
+  }
+  
+  @font-face {
+    font-family: "Disney";
+    src: url("/public/WalterTurncoat-Regular.ttf") format("truetype");
 }
 
 .App-logo {
@@ -13,6 +19,11 @@
   }
 }
 
+@media(prefers-color-scheme: dark) {
+  .App-logo {
+    filter: invert(1);
+  }
+}
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
