--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,51 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
+
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+/* Add this to your existing index.css */
+
+
+
+
+@font-face {
+  font-family: "Disney";
+  src: url("/public/WalterTurncoat-Regular.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "sankofa-Display";
+  src: url("/public/SankofaDisplay-Regular.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "winky-Sans";
+  src: url("/public/WinkySans-VariableFont_wght.ttf") format("truetype");
+}
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.animate-pulse {
+  animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+}
+
+@keyframes pulse {
+
+  0%,
+  100% {
+    opacity: 1;
+  }
+
+  50% {
+    opacity: .5;
+  }
 }
